Change css + Add bootstrap

--- a/assets/sass/app.scss
+++ b/assets/sass/app.scss
@@ -1,4 +1,5 @@
 @import "variables";
+@import "mixins";
 @import "fonts";
 @import "layouts/navbar";
 @import "layouts/header";
@@ -7,6 +8,7 @@
 @import "layouts/forms";
 @import "components/buttons";
 @import "components/icons";
+@import "boostrap-custom";
 
 html {
   scroll-behavior: smooth;
@@ -50,4 +52,8 @@ h1, h2 {
 
 .small {
   font-size: 0.875em;
+}
+
+.hidden {
+  display: none;
 }
