--- a/assets/sass/layouts/forms.scss
+++ b/assets/sass/layouts/forms.scss
@@ -1,42 +1,37 @@
-.register-form {
+.form {
+  margin-top: 32px;
   display: grid;
-  grid-template-columns: 500px;
+  grid-template-columns: 400px;
   justify-content: center;
+  grid-row-gap: 16px;
 
-  label {
-    grid-column: 1;
+  .trick-description {
+    height: 200px!important;
   }
 
-  input {
-    grid-column: 2;
+  .form-control:focus {
+    box-shadow: 0 0 8px 5px rgba($steel-blue, 0.6);
+    border-color: $steel-blue;
   }
 
-  &-row {
-    display: grid;
-    grid-template-columns: 150px 1fr;
+  .form-select:focus {
+    box-shadow: 0 0 8px 5px rgba($steel-blue, 0.6);
+    border-color: $steel-blue;
   }
 }
 
 .trick-form {
   &-file {
     font-family: Montserrat, serif;
+    font-size: 14px;
   }
 
   &-file::file-selector-button {
-    font-family: Montserrat, serif;
-    background: none;
-    border: $steel-blue 2px solid;
-    color: $steel-blue;
-    line-height: 0.7;
-    margin: 0.5em;
-    padding: 1em 2em;
-    transition: 0.25s ease-in-out;
+    @include standard-btn(none, $steel-blue, $steel-blue, 170px)
   }
 
   &-file::file-selector-button:hover {
-    cursor: pointer;
-    color: #FFF;
-    box-shadow: inset 13em 0 0 0 $steel-blue;
+    @include btn-slide-effect(#FFF, $steel-blue, 170px);
   }
 }
 
@@ -47,4 +42,5 @@
   flex-wrap: wrap;
   align-items: center;
 }
+
 
