--- a/assets/sass/layouts/tricks-list.scss
+++ b/assets/sass/layouts/tricks-list.scss
@@ -45,4 +45,9 @@
   .trick-description i:last-child {
     margin-left: 10px;
   }
+
+  .trick-name {
+    font-size: 24px;
+    margin: 12px 0;
+  }
 }
