--- a/templates/partials/trick.html.twig
+++ b/templates/partials/trick.html.twig
@@ -50,7 +50,7 @@
             <textarea aria-label="commentaire" name="myTextarea" placeholder="Votre commentaire" cols="55" rows="5"
                       minlength="10"
                       maxlength="500" required></textarea>
-                <button type="submit" class="btn-arrow--black btn-comment">Valider</button>
+                <button type="submit" class="btn-arrow--white btn-comment">Valider</button>
             </form>
             <div class="comment-list">
                 {% for comment in comments %}
