--- a/templates/partials/tricks_list.html.twig
+++ b/templates/partials/tricks_list.html.twig
@@ -11,7 +11,7 @@
                     </figure>
                 </a>
                 <div class="trick-description">
-                    <h2>{{ trick.data.name }}</h2>
+                    <h2 class="trick-name">{{ trick.data.name }}</h2>
                     {% if app.user %}
                         <div class="trick-preview-actions">
                             <a href="/trick/modify/{{ trick.data.id }}">
@@ -26,7 +26,7 @@
     </section>
     {% if hiddeLoadButton is empty %}
         <div class="center">
-            <button class="btn-arrow--black btn-trick-list" id="btn-load-more-tricks">Load more</button>
+            <button class="btn-arrow--white btn-trick-list" id="btn-load-more-tricks">Load more</button>
         </div>
     {% endif %}
 </div>
