--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -13,14 +13,20 @@
 
     {{ form_errors(registrationForm) }}
 
-    {{ form_start(registrationForm, {'attr': {'class': 'register-form'}}) }}
-        {{ form_row(registrationForm.pseudo) }}
-        {{ form_row(registrationForm.mail) }}
-        {{ form_row(registrationForm.plainPassword, {
-            label: 'Password'
-        }) }}
-        {{ form_row(registrationForm.agreeTerms) }}
-
-        <button type="submit" class="btn">Register</button>
+    {{ form_start(registrationForm, {'attr': {'class': 'form'}}) }}
+    <div class="form-floating">
+        {{ form_widget(registrationForm.pseudo) }}
+        {{ form_label(registrationForm.pseudo) }}
+    </div>
+    <div class="form-floating">
+        {{ form_widget(registrationForm.mail) }}
+        {{ form_label(registrationForm.mail) }}
+    </div>
+    <div class="form-floating">
+        {{ form_widget(registrationForm.plainPassword) }}
+        {{ form_label(registrationForm.plainPassword) }}
+    </div>
+    {{ form_row(registrationForm.agreeTerms) }}
+    <button type="submit" class="btn-submit">Register</button>
     {{ form_end(registrationForm) }}
 {% endblock %}
