--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -5,28 +5,34 @@
 {% block header %}{% endblock %}
 
 {% block content %}
-<form method="post">
-    {% if error %}
-        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
+    <form method="post" id="login-form" class="form form-floating">
+        {% if error %}
+            <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+        {% endif %}
 
-    {% if app.user %}
-        <div class="mb-3">
-            You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
+        {% if app.user %}
+            <div class="mb-3">
+                You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
+            </div>
+        {% endif %}
+
+        <h1 class="h3 mb-3 font-weight-normal">Please Log in</h1>
+        <div class="form-floating">
+            <input type="text" value="{{ last_username }}" name="mail" id="inputMail" class="form-control"
+                   autocomplete="username" placeholder="Mail" required autofocus>
+            <label for="inputMail">Mail</label>
         </div>
-    {% endif %}
+        <div class="form-floating">
+            <input type="password" name="password" id="inputPassword" class="form-control"
+                   autocomplete="current-password" placeholder="Password" required>
+            <label for="inputPassword">Password</label>
+        </div>
 
-    <h1 class="h3 mb-3 font-weight-normal">Please Log in</h1>
-    <label for="inputMail">Mail</label>
-    <input type="text" value="{{ last_username }}" name="mail" id="inputMail" class="form-control" autocomplete="username" required autofocus>
-    <label for="inputPassword">Password</label>
-    <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+        <input type="hidden" name="_csrf_token"
+               value="{{ csrf_token('authenticate') }}"
+        >
 
-    <input type="hidden" name="_csrf_token"
-           value="{{ csrf_token('authenticate') }}"
-    >
-
-    {#
+        {#
         Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
         See https://symfony.com/doc/current/security/remember_me.html
 
@@ -35,10 +41,14 @@
                 <input type="checkbox" name="_remember_me"> Remember me
             </label>
         </div>
-    #}
+        #}
 
-    <button class="btn btn-lg btn-primary" type="submit">
-        Sign in
-    </button>
-</form>
+        <button class="btn-submit" type="submit">
+            Sign in
+        </button>
+    </form>
+{% endblock %}
+
+{% block scripts_end_body %}
+
 {% endblock %}
