--- a/templates/partials/tricks_list.html.twig
+++ b/templates/partials/tricks_list.html.twig
@@ -6,7 +6,7 @@
                     <figure class="image-trick-list">
                         <img src="{{ path(
                             'get_trick_image',
-                            {'groupName': trick.group_name, 'trickName': trick.data.name,'imageName': trick.fileName}
+                            {'trickName': trick.data.name,'imageName': trick.fileName}
                         ) }}" alt=""/>
                     </figure>
                 </a>
