--- a/templates/partials/navbar.html.twig
+++ b/templates/partials/navbar.html.twig
@@ -1,5 +1,5 @@
 <nav class="head-nav">
-    <img src="{{ asset('build/images/Snowtricks-logo.png') }}" alt="logo">
+    <img src="{{ asset('build/images/Snowtricks-logo.png') }}" alt="Snowtricks logo">
     <ul class="head-list">
         <li><a href="/home">Home</a></li>
         <li>Tricks</li>
