Fix empty arrays errors

--- a/templates/partials/trick.html.twig
+++ b/templates/partials/trick.html.twig
@@ -9,7 +9,7 @@
 
 {% block content %}
     <div class="trick-container">
-        {% include 'partials/header_trick.html.twig' with {headerImage: headerImage.fileName} %}
+        {% include 'partials/header_trick.html.twig' %}
         {% if trickImages is not empty %}
         <h2>Images</h2>
         <div class="medias-container">
