--- a/templates/partials/header_trick.html.twig
+++ b/templates/partials/header_trick.html.twig
@@ -1,11 +1,11 @@
 <header class="head-trick-details">
-    {% if headerImageExist is not empty %}
+    {% if headerImage is not empty %}
         <img src="{{ path(
             'get_trick_image',
-            {'trickName': trick.name,'imageName': headerImage}
+            {'trickName': trick.name,'imageName': headerImage.fileName}
         ) }}" alt="image {{ trick.name }}">
     {% else %}
-        <img src="public/build/images/image-placeholder.jpg" alt="Image placeholder">
+        <img src="/build/images/image-placeholder.jpg" alt="Image placeholder">
     {% endif %}
     <h1>{{ trick.name }}</h1>
 </header>
