change trick image border radius

--- a/assets/sass/layouts/trick-details.scss
+++ b/assets/sass/layouts/trick-details.scss
@@ -24,6 +24,7 @@
     z-index: 0;
     width: 100%;
     aspect-ratio: 16/9;
+    border-radius: 10px;
   }
 
   h1 {
@@ -40,6 +41,10 @@
 .image-trick-details {
   width: 100%;
   aspect-ratio: 16/9;
+
+  &.img-form {
+    border-radius: 10px;
+  }
 }
 
 .trick-detail-description {
