--- a/templates/partials/trick_form.html.twig
+++ b/templates/partials/trick_form.html.twig
@@ -15,18 +15,24 @@
              data-prototype="{{ form_widget(trickForm.imagesTricks.vars.prototype)|e('html_attr') }}">
             {% for image in trickForm.imagesTricks %}
                 <div id="trick_form_imagesTricks_{{ loop.index-1 }}" class="trick-image-item">
-                    <img class="border-isheader isheader-top" src="/build/images/border-top-isheader.png" alt="border top isheader">
-                    <img class="border-isheader isheader-right" src="/build/images/border-right-isheader.png" alt="border right isheader">
-                    <img class="border-isheader isheader-bot" src="/build/images/border-bot-isheader.png" alt="border bot isheader">
-                    <img class="border-isheader isheader-left" src="/build/images/border-left-isheader.png" alt="border left isheader">
+                    <img class="border-isheader isheader-top" src="/build/images/border-top-isheader.png"
+                         alt="border top isheader" id="border-isheader-top">
+                    <img class="border-isheader isheader-right" src="/build/images/border-right-isheader.png"
+                         alt="border right isheader" id="border-isheader-right">
+                    <img class="border-isheader isheader-bot" src="/build/images/border-bot-isheader.png"
+                         alt="border bot isheader" id="border-isheader-bot">
+                    <img class="border-isheader isheader-left" src="/build/images/border-left-isheader.png"
+                         alt="border left isheader" id="border-isheader-left">
                     <div class="trick-image-preview">
                         {% if image.vars.value.fileName is empty %}
                             <img class="image-trick-details" src="/build/images/image-placeholder.webp" alt="">
                         {% else %}
-                            <img class="image-trick-details img-form" src="{{ path(
-                                'get_trick_image',
-                                {'trickName': trick.name,'imageName': image.vars.value.fileName}
-                            ) }}" alt="Image {{ loop.index }}">
+                            <a role="button" class="favorite-image">
+                                <img class="image-trick-details img-form" src="{{ path(
+                                    'get_trick_image',
+                                    {'trickName': trick.name,'imageName': image.vars.value.fileName}
+                                ) }}" alt="Image {{ loop.index }}">
+                            </a>
                         {% endif %}
                     </div>
                     {{ form_row(image.fileName) }}
