--- a/templates/partials/header_trick.html.twig
+++ b/templates/partials/header_trick.html.twig
@@ -3,9 +3,9 @@
         <img src="{{ path(
             'get_trick_image',
             {'trickName': trick.name,'imageName': headerImage.fileName}
-        ) }}" alt="image {{ trick.name }}">
+        ) }}" alt="image {{ trick.name }}" id="image-header-details">
     {% else %}
-        <img src="/build/images/image-placeholder.jpg" alt="Image placeholder">
+        <img src="/build/images/image-placeholder.jpg" alt="Image placeholder" id="image-header-details">
     {% endif %}
     <h1>{{ trick.name }}</h1>
 </header>
