--- a/templates/partials/trick_form.html.twig
+++ b/templates/partials/trick_form.html.twig
@@ -15,14 +15,16 @@
              data-prototype="{{ form_widget(trickForm.imagesTricks.vars.prototype)|e('html_attr') }}">
             {% for image in trickForm.imagesTricks %}
                 <div id="trick_form_imagesTricks_{{ loop.index-1 }}" class="trick-image-item">
-                    <img class="border-isheader isheader-top" src="/build/images/border-top-isheader.png"
-                         alt="border top isheader" id="border-isheader-top">
-                    <img class="border-isheader isheader-right" src="/build/images/border-right-isheader.png"
-                         alt="border right isheader" id="border-isheader-right">
-                    <img class="border-isheader isheader-bot" src="/build/images/border-bot-isheader.png"
-                         alt="border bot isheader" id="border-isheader-bot">
-                    <img class="border-isheader isheader-left" src="/build/images/border-left-isheader.png"
-                         alt="border left isheader" id="border-isheader-left">
+                    {% if image.vars.value.isInTheHeader %}
+                        <img class="border-isheader isheader-top" src="/build/images/border-top-isheader.png"
+                             alt="border top isheader" id="border-isheader-top">
+                        <img class="border-isheader isheader-right" src="/build/images/border-right-isheader.png"
+                             alt="border right isheader" id="border-isheader-right">
+                        <img class="border-isheader isheader-bot" src="/build/images/border-bot-isheader.png"
+                             alt="border bot isheader" id="border-isheader-bot">
+                        <img class="border-isheader isheader-left" src="/build/images/border-left-isheader.png"
+                             alt="border left isheader" id="border-isheader-left">
+                    {% endif %}
                     <div class="trick-image-preview">
                         {% if image.vars.value.fileName is empty %}
                             <img class="image-trick-details" src="/build/images/image-placeholder.webp" alt="">
@@ -36,22 +38,49 @@
                         {% endif %}
                     </div>
                     {{ form_row(image.fileName) }}
+                    {{ form_row(image.isInTheHeader) }}
                     <div class="image-file-actions">
                         {{ form_widget(image.file, {'attr': {'class': image.file.vars.attr.class ~ ' isFilled'}}) }}
                         <a role="button" class="delete-image-btn" id="delete-img-btn-{{ loop.index-1 }}">
                             <i class="fa-solid fa-trash icon-delete-img"></i>
                         </a>
                     </div>
+
                 </div>
             {% endfor %}
             <div class="trick-image-item" id="add-image-form-button">
                 <div class="image-trick-details center">
                     <a role="button">
-                        <i class="fa-solid fa-circle-plus icon-add-img"></i>
+                        <i class="fa-solid fa-circle-plus icon-add-item"></i>
                     </a>
                 </div>
             </div>
         </div>
+        <h2>Videos</h2>
+        <div class="medias-container" id="videos-list"
+             data-prototype="{{ form_widget(trickForm.videosTricks.vars.prototype)|e('html_attr') }}">
+            {% for video in trickForm.videosTricks %}
+                <div id="trick_form_videosTricks_{{ loop.index-1 }}" class="trick-video-item">
+                    <div class="trick-video-preview">
+                        {% if video.vars.value.url is empty %}
+                            <img class="image-trick-details" src="/build/images/video-placeholder.png"
+                                 alt="video {{ loop.index }}">
+                        {% else %}
+                            <iframe class="trick-video" src="{{ video.vars.value.url }}" allowfullscreen></iframe>
+                        {% endif %}
+                    </div>
+                    {{ form_row(video.url) }}
+                </div>
+            {% endfor %}
+            <div class="trick-video-item" id="add-video-form-button">
+                <div class="image-trick-details center">
+                    <a role="button">
+                        <i class="fa-solid fa-circle-plus icon-add-item"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <h2 class="mt-20">Informations</h2>
         <div class="form-floating">
             {{ form_widget(trickForm.name) }}
             {{ form_label(trickForm.name) }}
@@ -66,8 +95,8 @@
         </div>
         <button type="submit" class="btn-submit" data-just-validate-fallback-disabled="false">Save</button>
         {{ form_end(trickForm) }}
-    </div>
 
+    </div>
 {% endblock %}
 
 {% block scripts_end_body %}
