--- a/assets/sass/layouts/forms.scss
+++ b/assets/sass/layouts/forms.scss
@@ -79,9 +79,27 @@
   transition: all 300ms ease;
 }
 
+.invalid-field-text {
+  animation: fadeIn;
+  animation-duration: 200ms;
+}
+
+.delete-video-btn {
+  margin-left: 8px;
+}
+
+.trick-video-actions {
+  display: flex;
+  align-items: center;
+  margin-top: 8px;
+}
+
 .trick-video-link {
-  margin-top: 6px;
   width: 100%;
+
+  &-group {
+    width: 100%;
+  }
 }
 
 .border-fade-out {
