Add trick deletion action on home page

--- a/assets/sass/boostrap-custom.scss
+++ b/assets/sass/boostrap-custom.scss
@@ -6,5 +6,6 @@
 @import "bootstrap/scss/mixins";
 @import "bootstrap/scss/root";
 @import "bootstrap/scss/reboot";
+@import "bootstrap/scss/modal";
 // Layout & components
 @import "bootstrap/scss/forms";
