--- a/assets/sass/layouts/tricks-list.scss
+++ b/assets/sass/layouts/tricks-list.scss
@@ -51,3 +51,12 @@
     margin: 12px 0;
   }
 }
+
+.trick-delete-button {
+  cursor: pointer;
+}
+
+.text-modal {
+  text-align: center;
+  font-size: 20px;
+}
