--- a/assets/sass/mixins.scss
+++ b/assets/sass/mixins.scss
@@ -3,6 +3,7 @@
   font-family: Montserrat, serif;
   background: $background-color;
   border: $border-color 2px solid;
+  border-radius: 2px;
   color: $color;
   line-height: 0.7;
   margin: 0.5em;
@@ -14,4 +15,9 @@
   cursor: pointer;
   color: $background-color;
   box-shadow: inset $width 0 0 0 $color;
+}
+
+@mixin btn-close-effect($background-color, $color, $width) {
+  color: $color;
+  box-shadow: inset calc(-1 * ($width / 2)) 0 0 0 $background-color, inset calc($width / 2) 0 0 0 $background-color;
 }
