--- a/templates/partials/header_trick.html.twig
+++ b/templates/partials/header_trick.html.twig
@@ -5,7 +5,7 @@
             {'trickName': trick.name,'imageName': headerImage.fileName}
         ) }}" alt="image {{ trick.name }}" id="image-header-details">
     {% else %}
-        <img src="/build/images/image-placeholder.jpg" alt="Image placeholder" id="image-header-details">
+        <img src="/build/images/image-placeholder.webp" alt="Image placeholder" id="image-header-details">
     {% endif %}
     <h1>{{ trick.name }}</h1>
 </header>
