--- a/assets/sass/components/buttons.scss
+++ b/assets/sass/components/buttons.scss
@@ -62,3 +62,24 @@
     @include btn-slide-effect(#FFF, $steel-blue, 150px);
   }
 }
+
+.btn-small-red {
+  @include standard-btn(#b00a0a, #b00a0a, #FFF, 100px);
+  border-radius: 5px;
+  transition: all 300ms ease-in-out;
+
+  &:hover {
+    border-color: #910707;
+    background-color: #910707;
+  }
+}
+
+.btn-small-grey {
+  @include standard-btn(#6c757d, #6c757d, #FFF, 100px);
+
+  &:hover {
+    background-color: #5c636a;
+    border-color: #5c636a;
+  }
+  border-radius: 5px;
+}
