--- a/assets/sass/components/icons.scss
+++ b/assets/sass/components/icons.scss
@@ -26,3 +26,13 @@
     scale: 1.1;
   }
 }
+
+.icon-close-modal {
+  color: #000;
+  transition: all 250ms ease-in-out;
+
+  &:hover {
+    scale: 1.1;
+    color: rgba(0, 0, 0, 0.56);
+  }
+}
