Add flash message

--- a/assets/sass/app.scss
+++ b/assets/sass/app.scss
@@ -7,6 +7,7 @@
 @import "layouts/tricks-list";
 @import "layouts/trick-details";
 @import "layouts/forms";
+@import "components/alert-box";
 @import "components/buttons";
 @import "components/icons";
 @import "boostrap-custom";
