--- a/assets/sass/layouts/header.scss
+++ b/assets/sass/layouts/header.scss
@@ -1,4 +1,5 @@
 .masthead {
+  position: relative;
   background-size: cover;
   height: 90vh;
   display: flex;
@@ -18,14 +19,6 @@
     width: 100%;
     text-align: center;
     text-transform: uppercase;
-  }
-
-  .header-arrow {
-    position: absolute;
-    bottom: 30px;
-    right: 30px;
-    color: #FFFF;
-    font-size: 2em;
   }
 }
 
