--- a/assets/sass/layouts/navbar.scss
+++ b/assets/sass/layouts/navbar.scss
@@ -1,6 +1,5 @@
 .head-nav {
-  height: 100%;
-  width: 100%;
+  height: 10vh;
   display: flex;
   justify-content: space-between;
   margin: 0 30px;
@@ -11,7 +10,6 @@
   display: flex;
   align-items: center;
   padding: 0;
-  margin-right: 30px;
 
   li {
     height: 40%;
@@ -26,6 +24,10 @@
     padding: 0 10px;
     margin-right: 30px;
     z-index: 0;
+  }
+
+  li:last-child {
+    margin-right: 0;
   }
 
   li::after,
