--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -5,7 +5,7 @@
         <span class="split-title">of</span>
         <span class="split-title">extreme snowboarding</span>
     </h1>
-    <a class="sroll-=" href="#trick-section-home">
-        <i class="fa-solid fa-arrow-down header-arrow"></i>
+    <a href="#trick-list">
+        <i class="fa-solid fa-arrow-down arrow header-arrow"></i>
     </a>
 </header>
