--- a/assets/sass/components/alert-box.scss
+++ b/assets/sass/components/alert-box.scss
@@ -5,7 +5,7 @@
   max-width: 500px;
   min-width: 250px;
   padding: 1.5em;
-  margin: 30px auto 0;
+  margin: 20px 0 0;
   border-radius: 5px;
   box-shadow: 0 0 15px 5px #CCC;
 
