--- a/assets/sass/layouts/forms.scss
+++ b/assets/sass/layouts/forms.scss
@@ -1,13 +1,4 @@
-.form {
-  display: grid;
-  grid-template-columns: 400px;
-  justify-content: center;
-  grid-row-gap: 16px;
-
-  .trick-description {
-    height: 200px!important;
-  }
-
+.form-colors-custom {
   .form-control:focus {
     box-shadow: 0 0 8px 5px rgba($steel-blue, 0.6);
     border-color: $steel-blue;
@@ -16,6 +7,18 @@
   .form-select:focus {
     box-shadow: 0 0 8px 5px rgba($steel-blue, 0.6);
     border-color: $steel-blue;
+  }
+}
+
+
+.basic-form {
+  display: grid;
+  grid-template-columns: 400px;
+  justify-content: center;
+  grid-row-gap: 16px;
+
+  .trick-description {
+    height: 200px!important;
   }
 }
 
