--- a/assets/sass/layouts/trick-details.scss
+++ b/assets/sass/layouts/trick-details.scss
@@ -95,17 +95,31 @@
     text-align: center;
     margin-bottom: 30px;
   }
+
+  textarea {
+    height: 100%;
+    width: 100%;
+  }
 }
 
 .comment-list {
   display: grid;
   justify-content: center;
   grid-template-columns: 500px;
+  border-top: 1px solid #bdbdbd;
+}
+
+.alert-box + .comment {
+  margin-top: 20px;
 }
 
 .comment {
   display: flex;
   margin-bottom: 20px;
+
+  &:nth-child(1) {
+    margin-top: 20px;
+  }
 
   &:last-child {
     margin-bottom: 0;
