Change css form class name

--- a/templates/partials/trick.html.twig
+++ b/templates/partials/trick.html.twig
@@ -11,23 +11,23 @@
     <div class="trick-container">
         {% include 'partials/header_trick.html.twig' %}
         {% if trickImages is not empty %}
-        <h2>Images</h2>
-        <div class="medias-container">
-            {% for trickImage in trickImages %}
-                <img class="image-trick-details" src="{{ path(
-                    'get_trick_image',
-                    {'trickName': trick.name,'imageName': trickImage.fileName}
-                ) }}" alt="image {{ trick.name }}">
-            {% endfor %}
-        </div>
+            <h2>Images</h2>
+            <div class="medias-container">
+                {% for trickImage in trickImages %}
+                    <img class="image-trick-details" src="{{ path(
+                        'get_trick_image',
+                        {'trickName': trick.name,'imageName': trickImage.fileName}
+                    ) }}" alt="image {{ trick.name }}">
+                {% endfor %}
+            </div>
         {% endif %}
         {% if trickVideos is not empty %}
-        <h2>Videos</h2>
-        <div class="medias-container">
-            {% for trickVideo in trickVideos %}
-                <iframe class="trick-video" src="{{ trickVideo.url }}" allowfullscreen></iframe>
-            {% endfor %}
-        </div>
+            <h2>Videos</h2>
+            <div class="medias-container">
+                {% for trickVideo in trickVideos %}
+                    <iframe class="trick-video" src="{{ trickVideo.url }}" allowfullscreen></iframe>
+                {% endfor %}
+            </div>
         {% endif %}
         <div class="trick-detail-description">
             <h2>Description</h2>
@@ -43,47 +43,10 @@
                 {% endif %}
             </div>
         </div>
-        <section id="comment-section" class="comment-section">
-            <h2>Commentaires</h2>
-            <form class="comment-form" action="">
-            <textarea aria-label="commentaire" name="myTextarea" placeholder="Votre commentaire" cols="55" rows="5"
-                      minlength="10"
-                      maxlength="500" required></textarea>
-                <button type="submit" class="btn-arrow--white btn-comment">Valider</button>
-            </form>
-            <div class="comment-list">
-                {% for comment in comments %}
-                    <div class="comment">
-                        <i class="fa-solid fa-circle-user icon-user"></i>
-                        <div>
-                            <p class="comment-user-info">
-                                {{ comment.userPseudo }}
-                                <span class="small">
-                            - {{ comment.data.creationDate|date("d/m/Y \\à H:i") }}
-                        </span>
-                            </p>
-                            <p class="comment-text">
-                                Ceci est un exemple de commentaire
-                            </p>
-                        </div>
-                    </div>
-                {% endfor %}
-                <div class="comment">
-                    <i class="fa-solid fa-circle-user icon-user"></i>
-                    <div class="comment-text-group">
-                        <p class="comment-user-info">
-                            Pseudo 1
-                            <span class="small">
-                            - 7 juin 2023 à 14:36
-                        </span>
-                        </p>
-                        <p class="comment-text">
-                            Un autre commentaire
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </section>
+        {% include 'partials/comment_section.html.twig' %}
     </div>
+{% endblock %}
 
+{% block scripts_end_body %}
+    {{ encore_entry_script_tags('trick-details') }}
 {% endblock %}
