--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -13,7 +13,7 @@
 
     {{ form_errors(registrationForm) }}
 
-    {{ form_start(registrationForm, {'attr': {'class': 'form'}}) }}
+    {{ form_start(registrationForm, {'attr': {'class': 'basic-form form-colors-custom'}}) }}
     <div class="form-floating">
         {{ form_widget(registrationForm.pseudo) }}
         {{ form_label(registrationForm.pseudo) }}
