--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -5,7 +5,7 @@
 {% block header %}{% endblock %}
 
 {% block content %}
-    <form method="post" id="login-form" class="form form-floating">
+    <form method="post" id="login-form" class="basic-form form-colors-custom form-floating">
         {% if error %}
             <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
         {% endif %}
